--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -4,7 +4,8 @@ CFLAGS = -Wall -Werror -Wextra -std=c++98
 
 NAME = run
 
-SRC = main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp RobotomyRequestForm.cpp
+SRC = main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp \
+	RobotomyRequestForm.cpp PresidentialPardonForm.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
