modified files and moved folders

--- a/cpp06/ex00/Makefile
+++ b/cpp06/ex00/Makefile
@@ -4,7 +4,9 @@ CFLAGS = -Wall -Werror -Wextra -std=c++98
 
 NAME = run
 
-SRC = main.cpp ScalarConverter.cpp IntValueConverter.cpp
+SRC = main.cpp ScalarConverter.cpp IntValueConverter.cpp \
+ AValueConverter.cpp FloatValueConverter.cpp \
+ DoubleValueConverter.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
