--- a/cpp09/.vscode/settings.json
+++ b/cpp09/.vscode/settings.json
@@ -49,6 +49,13 @@
 		"sstream": "cpp",
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
-		"typeinfo": "cpp"
+		"typeinfo": "cpp",
+		"stack": "cpp",
+		"chrono": "cpp",
+		"cstring": "cpp",
+		"ctime": "cpp",
+		"ratio": "cpp",
+		"iomanip": "cpp",
+		"cinttypes": "cpp"
 	}
 }
